2004-06-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    Found a long-lurked bug in reporterr().
	    It did refer to wrong data in Solaris -> SEGV.
	    Oops..  Corrected printf()-like parameters, and
	    now it should not fault.

2004-06-22  Matti Aarnio  <mea@zmailer.org>

	* router/rfc822.c:
	    Move the verbose-tracing a bit earlier in the processing.

	* router/rfc822.ssl:
	    Remains of an attempt to modify the local-part address
	    semantics...  Not a success :-(

	* router/lib/header.c:
	    Change parsing rules for envelope headers.

	* smtpserver/policytest.c:
	    When in MSA-mode, _ignore_ 'relaycustnet +' attributes.
	    Will then always demand user to authenticate!

	* smtpserver/rfc821scn.c:
	    Deep reading of RFC 2821/2822 did show, that we had
	    a wee bit wrong type encodings for '"', '.', and '@'.
	    Corrected those, and under non-strict conditions did
	    modify the parsing to allow e.g.:  .foo.@example.com

	* smtpserver/smtpserver.c:
	    At the star of incoming session, report (into log) also
	    the PID of the running smtpserver process.  Helps to debug
	    couple odd problems that I have seen.

	* smtpserver/subdaemons.c:
	    Error-code  EBADFD  is something that exists only at Solaris,
	    and at Linux, not at FreeBSD..

2004-06-02  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Fixed the rate-tracker to function again.
	    For a while the rate tracker responses were just ignored...

2004-05-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons.c:
	    After exec()ing actual subdaemons, the  subdaemon_nofiles
	    variable must be reinitialized -- doing it in subdaemons_loop()
	    now.

2004-05-17  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpdata.c:
	    Report the content-filter result message as single message,
	    if at all possible.

	* smtpserver/subdaemon-ctf.c:
	    Detect and process EOF from subdaemon subserver correctly.
